--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -91,6 +91,12 @@
     <ClInclude Include="BossRoomWallCollision.h">
       <Filter>3.Play\CyberPeacockAreaLevel\Actor</Filter>
     </ClInclude>
+    <ClInclude Include="WallKickJumpEffect.h">
+      <Filter>3.Play\Player\Effect</Filter>
+    </ClInclude>
+    <ClInclude Include="DashEffect.h">
+      <Filter>3.Play\Player\Effect</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Player.cpp">
@@ -182,6 +188,12 @@
     </ClCompile>
     <ClCompile Include="BossRoomWallCollision.cpp">
       <Filter>3.Play\CyberPeacockAreaLevel\Actor</Filter>
+    </ClCompile>
+    <ClCompile Include="WallKickJumpEffect.cpp">
+      <Filter>3.Play\Player\Effect</Filter>
+    </ClCompile>
+    <ClCompile Include="DashEffect.cpp">
+      <Filter>3.Play\Player\Effect</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
