--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj
@@ -76,6 +76,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="DashEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="MagamDragoonMap.h">
       <SubType>
       </SubType>
@@ -133,6 +137,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="WallClimbDustEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="WallKickJumpEffect.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -194,6 +202,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="DashEffect.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="MagamDragoonMap.cpp">
       <SubType>
       </SubType>
@@ -252,6 +264,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="WallClimbDustEffect.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="WallKickJumpEffect.cpp">
       <SubType>
       </SubType>
     </ClCompile>
