--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj
@@ -76,6 +76,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="CyberPeacockBoss.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="DashEffect.h">
       <SubType>
       </SubType>
@@ -202,6 +206,11 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="CyberPeacockBoss.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="CyberPeacockBossState.cpp" />
     <ClCompile Include="DashEffect.cpp">
       <SubType>
       </SubType>
@@ -383,6 +392,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -398,6 +408,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
