--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj
@@ -23,6 +23,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="BossRoomDoor.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="BossRoomWallCollision.h">
       <SubType>
       </SubType>
@@ -89,6 +93,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="DashEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="ExplosionEffect.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -162,6 +170,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="BossRoomDoor.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="BossRoomWallCollision.cpp">
       <SubType>
       </SubType>
@@ -228,6 +240,10 @@
     </ClCompile>
     <ClCompile Include="CyberPeacockBossState.cpp" />
     <ClCompile Include="DashEffect.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="ExplosionEffect.cpp">
       <SubType>
       </SubType>
     </ClCompile>
