--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj
@@ -96,6 +96,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="DashDustEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="DashEffect.h">
       <SubType>
       </SubType>
@@ -259,6 +263,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="CyberPeacockBossState.cpp" />
+    <ClCompile Include="DashDustEffect.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="DashEffect.cpp">
       <SubType>
       </SubType>
