--- a/APIApp/GameEngineContents/GameEngineContents.vcxproj
+++ b/APIApp/GameEngineContents/GameEngineContents.vcxproj
@@ -19,6 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BossHitEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="BossHPBar.h">
       <SubType>
       </SubType>
@@ -186,6 +190,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BossHitEffect.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="BossHPBar.cpp">
       <SubType>
       </SubType>
